<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StudentFriends"
        android:background="#FFFF8F" >
 
<TextView
    android:id="@+id/student_friends"
    style="@style/PageTitle"
    android:text="@string/student_friends" />
    
<Button
    android:id="@+id/home_button"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="68dp"
    android:layout_height="40dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@drawable/bg_key"
    android:text="@string/home" />

<TextView
    android:id="@+id/TextView_add_friends_title"
    style="@style/PageTitle"
    android:layout_alignLeft="@+id/home_button"
    android:layout_below="@+id/home_button"
    android:text="@string/add_a_friend"
    android:textSize="15sp" />

<EditText
    android:id="@+id/editText_enterFriendName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/TextView02"
    android:layout_alignBottom="@+id/TextView02"
    android:layout_toRightOf="@+id/TextView02"
    android:ems="10"
    android:inputType="text" >

    <requestFocus />
</EditText>

<TextView
    android:id="@+id/ApprovedFriendsTextView"
    style="@style/PageTitle"
    android:layout_alignLeft="@+id/TextView_add_friends_title"
    android:layout_below="@+id/add_button"
    android:text="@string/approved_friends_title"
    android:textSize="15sp" />

<ListView
    android:id="@+id/friendListView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/TextView02"
    android:layout_below="@+id/ApprovedFriendsTextView" >
</ListView>

<TextView
    android:id="@+id/UnapprovedFriendsTextView"
    style="@style/PageTitle"
    android:layout_alignLeft="@+id/TextView_add_friends_title"
    android:layout_below="@+id/friendListView"
    android:text="@string/unapproved_friends_title"
    android:textSize="15sp" />

<ListView
    android:id="@+id/notFriendsListView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/TextView02"
    android:layout_below="@+id/UnapprovedFriendsTextView" >
</ListView>

<Button
    android:id="@+id/delete_button"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="68dp"
    android:layout_height="40dp"
    android:layout_below="@+id/notFriendsListView"
    android:layout_toRightOf="@+id/TextView02"
    android:background="@drawable/bg_key"
    android:text="@string/delete" />

<TextView
    android:id="@+id/TextView02"
    style="@style/PageTitle"
    android:layout_alignLeft="@+id/TextView_add_friends_title"
    android:layout_below="@+id/TextView_add_friends_title"
    android:text="@string/friend_username"
    android:textSize="15sp" />

<Button
    android:id="@+id/add_button"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="68dp"
    android:layout_height="40dp"
    android:layout_below="@+id/editText_enterFriendName"
    android:layout_marginTop="17dp"
    android:layout_toRightOf="@+id/student_friends"
    android:text="@string/add" />

</RelativeLayout>
