<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    tools:context="edu.iastate.cysquare.StudentWelcome">

<TextView
    android:id="@+id/student_welcome"
    style="@style/PageTitle"
    android:layout_alignTop="@+id/logout_button"
    android:text="@string/student_welcome" />
    
<Button
    android:id="@+id/logout_button"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="68dp"
    android:layout_height="40dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@drawable/bg_key"
    android:text="@string/logout" />

<Button
    android:id="@+id/my_profile_button"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/my_friends_button"
    android:layout_below="@+id/my_friends_button"
    android:layout_marginTop="30dp"
    android:background="@drawable/bg_key"
    android:text="@string/my_profile" />

<Button
    android:id="@+id/my_classes_button"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/my_profile_button"
    android:layout_below="@+id/my_profile_button"
    android:layout_marginTop="30dp"
    android:background="@drawable/bg_key"
    android:text="@string/my_classes" />

<Button
    android:id="@+id/my_friends_button"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/check_in_button"
    android:layout_centerVertical="true"
    android:background="@drawable/bg_key"
    android:text="@string/my_friends" />

<Button
    android:id="@+id/check_in_button"
    android:layout_width="140dp"
    android:layout_height="80dp"
    android:layout_above="@+id/my_friends_button"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="30dp"
    android:background="@drawable/bg_key"
    android:text="@string/check_in" />



</RelativeLayout>
