<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InstructorWelcome" >

    <TextView
        android:id="@+id/instructor_welcome"
        style="@style/PageTitle"
        android:layout_alignTop="@+id/logout_button"
        android:text="@string/instructor_welcome" />

    <Button
        android:id="@+id/logout_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="68dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/logout" />

    <Button
        android:id="@+id/my_profile_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instructor_welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/my_profile" />

    <Button
        android:id="@+id/current_checkins_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_profile_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/current_checkins" />

    <Button
        android:id="@+id/post_question_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_checkins_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/post_question" />

    <Button
        android:id="@+id/notifications_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/post_question_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/notifications" />

</RelativeLayout>