<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InstructorProfile" >

<TextView
    android:id="@+id/instructor_profile"
    style="@style/PageTitle"
    android:text="@string/instructor_profile" />
    
<Button
    android:id="@+id/home_button"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="68dp"
    android:layout_height="40dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:text="@string/home" />

<TextView
    android:id="@+id/classes"
    style="@style/PageTitle"
    android:layout_alignLeft="@+id/add_button"
    android:layout_below="@+id/add_button"
    android:text="@string/student_classes"
    android:textSize="20sp" />

<ListView
    android:id="@+id/instructorClassesListView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/classes"
    android:layout_alignTop="@+id/classes"
    android:layout_marginTop="32dp" >
</ListView>

<Button
    android:id="@+id/delete_button"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/instructorClassesListView"
    android:text="@string/delete" />

<Button
    android:id="@+id/add_button"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/home_button"
    android:layout_below="@+id/home_button"
    android:text="@string/addNewClass_button" />

</RelativeLayout>