<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AdminClasses" >

    <Button
        android:id="@+id/home_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="68dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/home" />

    <TextView
        android:id="@+id/admin_classes"
        style="@style/PageTitle"
        android:layout_alignTop="@+id/home_button"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/home_button"
        android:text="@string/admin_classes" />
    
    <TextView
        android:id="@+id/admin_classList"
        style="@style/PageTitle"
        android:layout_marginLeft="18dp"
        android:layout_below="@+id/home_button"
        android:text="@string/admin_current_classes" />

    <ListView
        android:id="@+id/allClassesListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/home_button"
        android:layout_below="@+id/admin_classes"
        android:layout_marginTop="14dp" >
    </ListView>
    
    <Button
	    android:id="@+id/delete_button"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/allClassesListView"
	    android:text="@string/delete_button" />

</RelativeLayout>