<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >
    
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AdminUsers" >

    <TextView
        android:id="@+id/admin_users"
        style="@style/PageTitle"
        android:text="@string/admin_users" />

    <Button
        android:id="@+id/home_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="68dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/home" />

    <Button
        android:id="@+id/unapprovedUsers_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/home_button"
        android:text="@string/view_unapproved_users" />

    <ListView
        android:id="@+id/approvedUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/unapprovedUsers_button"
        android:layout_below="@+id/unapprovedUsers_button"
        android:layout_marginTop="15dp" >
    </ListView>
    
    <Button
        android:id="@+id/delete_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/unapprovedUsers_button"
        android:text="@string/delete" />

</RelativeLayout>

</ScrollView>