<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InstructorCurrentCheckIns" >

<Button
    android:id="@+id/home_button"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="68dp"
    android:layout_height="40dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:text="@string/home" />

<TextView
    android:id="@+id/instructor_current_checkins"
    style="@style/PageTitle"
    android:layout_alignTop="@+id/home_button"
    android:layout_toRightOf="@+id/home_button"
    android:text="@string/instructor_current_checkins" />

<TextView
    android:id="@+id/class_name"
    style="@style/PageTitle"
    android:layout_alignLeft="@+id/home_button"
    android:layout_below="@+id/instructor_current_checkins"
    android:text="@string/class_names"
    android:textSize="15sp" />

<ListView
    android:id="@+id/class_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/class_name"
    android:layout_alignTop="@+id/class_name"
    android:layout_marginTop="24dp" >
</ListView>

<TextView
    android:id="@+id/check_ins_name"
    style="@style/PageTitle"
    android:layout_alignLeft="@+id/home_button"
    android:layout_below="@+id/class_list"
    android:text="@string/check_ins_names"
    android:textSize="15sp" />

<ListView
    android:id="@+id/check_ins_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/home_button"
    android:layout_below="@+id/check_ins_name"
    android:layout_marginTop="24dp" >
</ListView>

</RelativeLayout>