<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.iastate.cysquare.MainActivity" >
	
     <TextView
    	android:id="@+id/Welcome_to_CySquare"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="50dp"
    	android:layout_centerHorizontal="true"
    	android:text="@string/Welcome_to_CySquare"
    	android:textColor="#FF0009"
    	android:textAppearance="?android:attr/textAppearanceLarge" />
     
    <!-- //username text label "Username:" 
    //textView2  -->
    
    
    <!-- //username text input field  	
    //editText1 -->
    <EditText
    	android:id="@+id/editText_username" 
     	android:layout_width="500dp"
      	android:layout_height="wrap_content"
      	android:layout_alignBottom="@+id/textView_username"
      	android:layout_marginLeft="2dp"
      	android:layout_toRightOf="@+id/textView_username"
      	android:ems="10" />
   	
   	
   	<!-- //password text label "Password:"
   	//textView3 -->
    
    <!-- 
    password text input field	
    editText2 -->
	<EditText
     	android:id="@+id/editText_password" 
      	android:layout_width="500dp"
      	android:layout_height="wrap_content"
      	android:layout_alignBottom="@+id/textView_password"
      	android:layout_alignLeft="@+id/editText_username"
      	android:layout_toRightOf="@+id/textView_password"
      	android:layout_marginLeft="2dp"
      	android:ems="10"
      	android:inputType="textPassword" />

	<!-- button1 -->

	<TextView
	    android:id="@+id/textView_username"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/Welcome_to_CySquare"
	    android:layout_marginLeft="17dp"
	    android:layout_marginTop="148dp"
	    android:text="@string/username"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/textView_password"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/textView_username"
	    android:layout_below="@+id/textView_username"
	    android:layout_marginTop="19dp"
	    android:text="@string/password"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<Button
	    android:id="@+id/button_Create"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/Welcome_to_CySquare"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="34dp"
	    android:onClick="createNewUser"
	    android:text="@string/CreateNewUser" />

	<TextView
	    android:id="@+id/textView_or"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/editText_username"
	    android:layout_centerHorizontal="true"
	    android:text="@string/or" />

	<Button
	    android:id="@+id/button_login"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/editText_password"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="50dp"
	    android:onClick="login"
	    android:text="@string/Login" />

</RelativeLayout>
