<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StudentClasses" 
    android:background="#FFFF8F" >

<TextView
    android:id="@+id/student_classes"
    style="@style/PageTitle"
    android:text="@string/student_classes" />
    
<Button
    android:id="@+id/home_button"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="68dp"
    android:layout_height="40dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@drawable/bg_key"
    android:text="@string/home" />

<Spinner
    android:id="@+id/classList_spinner"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/home_button"
    android:layout_below="@+id/home_button" />

<Button
    android:id="@+id/add_button"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/classList_spinner"
    android:layout_below="@+id/classList_spinner"
    android:background="@drawable/bg_key"
    android:text="@string/add_button" />

<ListView
    android:id="@+id/studentClassesListView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/add_button" >
</ListView>

<Button
    android:id="@+id/delete_button"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/classList_spinner"
    android:layout_below="@+id/studentClassesListView"
    android:background="@drawable/bg_key"
    android:text="@string/delete_button" />

</RelativeLayout>
