<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.iastate.cysquare.AdminUnapprovedUsers" >

    <TextView
        android:id="@+id/unapproved_users"
        style="@style/PageTitle"
        android:text="@string/unapproved_title" />

    <Button
        android:id="@+id/approve_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/unapproved_users"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="28dp"
        android:text="@string/approve" />

    <Button
        android:id="@+id/delete_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/approve_button"
        android:layout_alignBottom="@+id/approve_button"
        android:layout_alignRight="@+id/unapproved_users"
        android:layout_marginRight="20dp"
        android:text="@string/delete" />


</RelativeLayout>
